--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FindMyClassmates</string>
+    <string name="app_logo_description">Test</string>
 </resources>
